@@ -12,6 +12,7 @@ Changelog for 1.3.36
 * Fixing manually entered tax amounts ignored printing invoice (Chris T, 864)
 * Fixing deleting gl draft via gl screen fails (Chris T, 871)
 * Fixing receipts listing "to pay" for amount (Chris T, 892)
+* Setting->get() now works with named keys (Chris T)
 
 Chris T is Chris Travers
 Nick P is Nick Prater
